@@ -2,7 +2,7 @@
  *
  * Pentaho Data Integration
  *
- * Copyright (C) 2002-2023 by Hitachi Vantara : http://www.pentaho.com
+ * Copyright (C) 2002-2024 by Hitachi Vantara : http://www.pentaho.com
  *
  *******************************************************************************
  *
@@ -23,84 +23,106 @@
 package org.pentaho.di.core.logging;
 
 import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.pentaho.di.core.Const;
-import org.pentaho.di.core.util.Utils;
+import org.mockito.MockedStatic;
 import org.pentaho.di.core.variables.VariableSpace;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
+import org.pentaho.di.trans.HasDatabasesInterface;
 import org.springframework.util.ReflectionUtils;
 
 import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.concurrent.atomic.AtomicInteger;
 
-import static org.junit.Assert.*;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyBoolean;
-import static org.mockito.Matchers.anyString;
-
-import static org.mockito.Mockito.*;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.anyInt;
 import static org.mockito.Mockito.doCallRealMethod;
-import static org.powermock.api.mockito.PowerMockito.mockStatic;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.spy;
 
-@RunWith( PowerMockRunner.class )
-@PowerMockIgnore( "jdk.internal.reflect.*" )
-@PrepareForTest( { KettleLogStore.class, LoggingRegistry.class, Utils.class, Const.class } )
 public class BaseLogTableTest {
 
   @Test
   public void testSecondJobExecutionDoesNotReturnLogFromFirstExecution() throws Exception {
-    mockStatic( KettleLogStore.class );
-    mockStatic( LoggingRegistry.class );
-    mockStatic( Utils.class );
-    mockStatic( Const.class );
+    try ( MockedStatic<KettleLogStore> kettleLogStoreMockedStatic = mockStatic( KettleLogStore.class );
+          MockedStatic<LoggingRegistry> loggingRegistryMockedStatic = mockStatic( LoggingRegistry.class ) ) {
 
-    LoggingBuffer lb = spy( new LoggingBuffer( 10 ) );
-    when( KettleLogStore.getAppender() ).thenReturn( lb );
-    doCallRealMethod().when( lb ).getBuffer( anyString(), anyBoolean(), anyInt() );
+      LoggingBuffer lb = spy( new LoggingBuffer( 10 ) );
+      kettleLogStoreMockedStatic.when( KettleLogStore::getAppender ).thenReturn( lb );
+      doCallRealMethod().when( lb ).getBuffer( anyString(), anyBoolean(), anyInt() );
 
-    LoggingRegistry lr = mock( LoggingRegistry.class );
-    when( LoggingRegistry.getInstance() ).thenReturn( lr );
-    doReturn( Arrays.asList( "1" ) ).when( lr ).getLogChannelChildren( anyString() );
+      LoggingRegistry lr = mock( LoggingRegistry.class );
+      loggingRegistryMockedStatic.when( LoggingRegistry::getInstance ).thenReturn( lr );
+      doReturn( List.of( "1" ) ).when( lr ).getLogChannelChildren( anyString() );
 
-    Field privateLoggingRegistryField = LoggingBuffer.class.getDeclaredField( "loggingRegistry" );
-    privateLoggingRegistryField.setAccessible( true );
-    ReflectionUtils.setField( privateLoggingRegistryField, lb, lr );
+      Field privateLoggingRegistryField = LoggingBuffer.class.getDeclaredField( "loggingRegistry" );
+      privateLoggingRegistryField.setAccessible( true );
+      ReflectionUtils.setField( privateLoggingRegistryField, lb, lr );
 
-    ConcurrentSkipListMap<Integer, BufferLine> bl = new ConcurrentSkipListMap<>();
-    Field privateLBufferField = LoggingBuffer.class.getDeclaredField( "buffer" );
-    privateLBufferField.setAccessible( true );
-    ReflectionUtils.setField( privateLBufferField, lb, bl );
+      ConcurrentSkipListMap<Integer, BufferLine> bl = new ConcurrentSkipListMap<>();
+      Field privateLBufferField = LoggingBuffer.class.getDeclaredField( "buffer" );
+      privateLBufferField.setAccessible( true );
+      ReflectionUtils.setField( privateLBufferField, lb, bl );
 
-    KettleLoggingEvent kLE1 = spy( KettleLoggingEvent.class );
-    LogMessage lm = new LogMessage( "First Job Execution Logging Event", "1", LogLevel.BASIC );
-    kLE1.setMessage( lm );
-    addToBuffer( bl, new BufferLine( kLE1 ) );
+      KettleLoggingEvent kLE1 = spy( KettleLoggingEvent.class );
+      LogMessage lm = new LogMessage( "First Job Execution Logging Event", "1", LogLevel.BASIC );
+      kLE1.setMessage( lm );
+      BufferLine firstBufferLine = new BufferLine( kLE1 );
+      Field bufferSequenceNum = BufferLine.class.getDeclaredField( "sequence" );
+      ReflectionUtils.makeAccessible( bufferSequenceNum );
+      int startingBufferSequence =
+        ( (AtomicInteger) ReflectionUtils.getField( bufferSequenceNum, firstBufferLine ) ).intValue();
+      addToBuffer( bl, firstBufferLine );
 
-    BaseLogTable baseLogTable = mock( BaseLogTable.class );
-    doCallRealMethod().when( baseLogTable ).getLogBuffer( any( VariableSpace.class ), anyString(), any( LogStatus.class ), anyString(), anyInt() );
+      VariableSpace vs = mock( VariableSpace.class );
 
-    VariableSpace vs = mock( VariableSpace.class );
+      BaseLogTable baseLogTable = new BaseLogTableTestImpl( vs, null, "", "", "" );
 
-    String s1 = baseLogTable.getLogBuffer( vs, "1", LogStatus.START, "", 1 );
-    assertTrue( s1.contains( "First Job Execution Logging Event" ) );
+      String s1 = baseLogTable.getLogBuffer( vs, "1", LogStatus.START, "", startingBufferSequence );
+      assertTrue( s1.contains( "First Job Execution Logging Event" ) );
 
-    KettleLoggingEvent kLE2 = spy( KettleLoggingEvent.class );
-    LogMessage lm2 = new LogMessage( "Second Job Execution Logging Event", "1", LogLevel.BASIC );
-    kLE2.setMessage( lm2 );
-    addToBuffer( bl, new BufferLine( kLE2 ) );
+      KettleLoggingEvent kLE2 = spy( KettleLoggingEvent.class );
+      LogMessage lm2 = new LogMessage( "Second Job Execution Logging Event", "1", LogLevel.BASIC );
+      kLE2.setMessage( lm2 );
+      addToBuffer( bl, new BufferLine( kLE2 ) );
 
-    String s2 = baseLogTable.getLogBuffer( vs, "1", LogStatus.START, "", 2 );
-    assertFalse( s2.contains( "First Job Execution Logging Event" ) );
-    assertTrue( s2.contains( "Second Job Execution Logging Event" ) );
+      String s2 = baseLogTable.getLogBuffer( vs, "1", LogStatus.START, "", startingBufferSequence + 1 );
+      assertFalse( s2.contains( "First Job Execution Logging Event" ) );
+      assertTrue( s2.contains( "Second Job Execution Logging Event" ) );
+    }
   }
 
   private void addToBuffer( ConcurrentSkipListMap bl, BufferLine bufferLine ) {
     bl.put( bufferLine.getNr(), bufferLine );
+  }
+
+  // this may not be essential but it's easier to debug than a mocked abstract class
+  class BaseLogTableTestImpl extends BaseLogTable {
+
+    public BaseLogTableTestImpl( VariableSpace space, HasDatabasesInterface databasesInterface,
+                                 String connectionName, String schemaName, String tableName ) {
+      super( space, databasesInterface, connectionName, schemaName, tableName );
+    }
+
+    @Override public String getLogTableCode() {
+      return "";
+    }
+
+    @Override public String getConnectionNameVariable() {
+      return "";
+    }
+
+    @Override public String getSchemaNameVariable() {
+      return "";
+    }
+
+    @Override public String getTableNameVariable() {
+      return "";
+    }
   }
 
 }
